Greasepencil parent to armature with envelope weights assigns wrong weights #73660

Closed
opened 2020-02-07 16:57:49 +01:00 by Philipp Oeser · 8 comments
Member

System Information
Operating system: Linux-5.4.13-201.fc31.x86_64-x86_64-with-fedora-31-Thirty_One 64 Bits
Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.44

Blender Version
Broken: version: 2.83 (sub 2), branch: master, commit date: 2020-02-07 11:18, hash: d809853513

Short description of error
Greasepencil parent to armature with envelope weights assigns wrong weights

Exact steps for others to reproduce the error
greasepencil_armature_parent_envelope_weights.blend

  • Open file
  • parent the greasepencil monkey to the armature {key Ctrl P} (using With Envelope Weights option)
  • vertex groups are created, but the weights dont take the bones envelope distance into account

This is reporting the second issue of #60789 (Grease Pencil Armature Deform fails with Envelope Deform) separately, keeping it isolated.

Note:

In #60789#605191, @antoniov wrote:
Currently, when you use Ctrl+P with envelopes does the same that vertex group.

**System Information** Operating system: Linux-5.4.13-201.fc31.x86_64-x86_64-with-fedora-31-Thirty_One 64 Bits Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.44 **Blender Version** Broken: version: 2.83 (sub 2), branch: master, commit date: 2020-02-07 11:18, hash: `d809853513` **Short description of error** Greasepencil parent to armature with envelope weights assigns wrong weights **Exact steps for others to reproduce the error** [greasepencil_armature_parent_envelope_weights.blend](https://archive.blender.org/developer/F8327755/greasepencil_armature_parent_envelope_weights.blend) - Open file - parent the greasepencil monkey to the armature {key Ctrl P} (using With Envelope Weights option) - vertex groups are created, but the weights dont take the bones envelope distance into account This is reporting the second issue of #60789 (Grease Pencil Armature Deform fails with Envelope Deform) separately, keeping it isolated. Note: > In #60789#605191, @antoniov wrote: > Currently, when you use Ctrl+P with envelopes does the same that vertex group.
Author
Member

Added subscribers: @antoniov, @lichtwerk

Added subscribers: @antoniov, @lichtwerk
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Actually, this is a non supported feature.

Actually, this is a non supported feature.
Author
Member

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish
Author
Member

In #73660#867576, @antoniov wrote:
Actually, this is a non supported feature.

I see that gpencil_object_vgroup_calc_from_armature only supports one mode (GP_PAR_ARMATURE_AUTO), and this is used for both PAR_ARMATURE_AUTO and PAR_ARMATURE_ENVELOPE.

Just saying: if you are not planning to implement this, it might be better to remove this option entirely from parent_set_invoke_menu (in case of greasepencil).
Having this option there, but having it do something entirely different from what it advertises, seems wrong to me...

> In #73660#867576, @antoniov wrote: > Actually, this is a non supported feature. I see that `gpencil_object_vgroup_calc_from_armature` only supports one mode (`GP_PAR_ARMATURE_AUTO`), and this is used for both `PAR_ARMATURE_AUTO` and `PAR_ARMATURE_ENVELOPE`. Just saying: if you are not planning to implement this, it might be better to remove this option entirely from `parent_set_invoke_menu` (in case of greasepencil). Having this option there, but having it do something entirely different from what it advertises, seems wrong to me...
Antonio Vazquez self-assigned this 2020-02-07 17:42:28 +01:00

This issue was referenced by 47d13fecfb

This issue was referenced by 47d13fecfbb7f2111ccd71b5376c8c3094ca1558

Proposed fix: D6777

Proposed fix: [D6777](https://archive.blender.org/developer/D6777)

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73660
No description provided.