Fix T73660: Hide envelop option for Grease Pencil weights generation

As this feature is not supported yet, it's better to hide for grease pencil.
Differential Revision: https://developer.blender.org/D6777